# app/Http/Controllers/BudgetsController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\User;
 use Illuminate\Http\Request;
 
 class BudgetsController extends Controller
@@ -36,9 +37,24 @@ class BudgetsController extends Controller
      *     )
      * )
      */
-    public function index()
+    public function index($userId)
     {
         //
+        $budgets = User::where('user_id', $userId)->get(['Savings', 'Education', 'Rent', 'Feeding', 'Entertainment', 'Gifts', 'Miscellaneous', 'Others'])[0];
+
+        if (($budgets)){
+            return response()->json([
+                'response' => 'success',
+                'data' => $budgets,
+                
+            ], 200);
+        } else {
+            return response()->json([
+                'message' => 'something occur',
+                'response' => 'error',
+                
+            ], 400);
+        }
     }
 
     /**
@@ -85,4 +101,50 @@ class BudgetsController extends Controller
     {
         //
     }
+
+    /**
+     * @OA\Get(
+     * path="/api/budgets/{user_id}/{budget_type}",
+     * summary="Get single budget",
+     * description="Get all budget of a particular type amount belonging to a particular user user",
+     * operationId="GetBudget",
+     * tags={"Budgets"},
+     * 
+     * @OA\Response(
+     *    response=422,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Sorry, wrong user details. Please try again")
+     *        )
+     *     ),
+     *  * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Success"),
+     *  @OA\Property(property="data", type="object", example="data objects")
+     *        )
+     *     )
+     * )
+     */
+    public function getBudget($user_id, $budget_type){
+        
+        $budget = User::where('user_id', $user_id)->get([$budget_type])[0];
+
+        if ( $budget ){
+
+                return response()->json([
+                    'response' => 'success',
+                    'data' => $budget,
+                ], 200);
+            
+        } else {
+            return response()->json([
+                'message' => 'Budget not found',
+                'response' => 'error',
+            ], 404);
+        }
+
+    }
+
 }
